2009-12-11  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Fixed typo in test result.

        * platform/gtk/editing/execCommand/toggle-compound-styles-expected.txt:

2009-12-11  Csaba Osztrogonác  <ossy@webkit.org>

        Rubber-stamped by Simon Hausmann.

        [Qt] TouchEvent related tests have platform dependent results until all platform implement it.
        Original expected files copied.

        * platform/qt/fast/dom/Window/window-properties-expected.txt: Copied from LayoutTests/fast/dom/Window/window-properties-expected.txt.
        * platform/qt/fast/dom/prototype-inheritance-expected.txt: Copied from LayoutTests/fast/dom/prototype-inheritance-expected.txt.
        * platform/qt/fast/dom/prototype-inheritance.html: Copied from LayoutTests/fast/dom/prototype-inheritance.html.
        * platform/qt/fast/js/global-constructors-expected.txt: Copied from LayoutTests/fast/js/global-constructors-expected.txt.

2009-12-11  Simon Hausmann  <simon.hausmann@nokia.com>

        Skip the touch tests on Windows (somehow that hunk got lost).

        * platform/win/Skipped:

2009-12-11  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Adler.

        Fix a problem that JSC::gregorianDateTimeToMS() returns a negative
        value for a huge year value.
        https://bugs.webkit.org/show_bug.cgi?id=32304

        * fast/js/date-daysfrom1970-overflow-expected.txt: Added.
        * fast/js/date-daysfrom1970-overflow.html: Added.
        * fast/js/script-tests/date-daysfrom1970-overflow.js: Added.

2009-12-11  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Darin Adler.

        The values of RuntimeArray are not enumerable
        https://bugs.webkit.org/show_bug.cgi?id=29005

        The indices of RuntimeArray should be enumerated like for a regular array.

        * platform/mac/fast/dom/wrapper-classes-objc-expected.txt:
        * platform/mac/fast/dom/wrapper-classes-objc.html:
