@@ -335,6 +335,8 @@ PASS inner.TextEvent.isInner is true
 PASS inner.TextEvent.constructor.isInner is true
 PASS inner.TextMetrics.isInner is true
 PASS inner.TextMetrics.constructor.isInner is true
+PASS inner.TouchEvent.isInner is true
+PASS inner.TouchEvent.constructor.isInner is true
 PASS inner.TypeError.isInner is true
 PASS inner.TypeError.constructor.isInner is true
 PASS inner.UIEvent.isInner is true
